<resources>
    <string name="app_name">ManonAndroidERestaurant</string>
    <string name="entr_es">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="erestaurant">eRestaurant</string>
    <string name="logo">Logo</string>
    <string name="nos_entr_es">Nos Entrées</string>
    <string name="nos_plats">Nos Plats</string>
    <string name="nos_desserts">Nos Desserts</string>
    <string name="imageplat">imagePlat</string>
    <string-array name="entreesList">
        <item>Croque aux truffes</item>
        <item>Tomate Burrata</item>
        <item>Roulés Prestige au caviar</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="play">play</string>
    <string name="ble_scan_play">Lancer le scan BLE</string>
    <string name="ble_scan_pause">Scan BLE en cours _</string>
    <string name="ble_scan_device_error">BLE non disponible sur cet appareil</string>
    <string name="ble_device_disconnected">Statut : déconnecté</string>
    <string name="ble_device_connected">Statut : connecté</string>
    <string name="ble_device_characteristic_read" />
    <string name="ble_characteristic_read">LECTURE</string>
    <string name="ble_characterisitc_write">ECRITURE</string>
    <string name="image">image</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="ble_device_status_connecting">Statut : connexion</string>
    <string name="ble_device_status_disconnecting">statut : déconnexion</string>
    <string name="ble_device_write_characteristic_title">ecrire la valeur</string>
    <string name="ble_device_write_characteristic_confirm">confirmer</string>
    <string name="ble_device_write_characteristic_cancel">annuler</string>
    <string name="toast">toast</string>
    <string name="quantity" />
    <string name="itemAdded" />
</resources>